--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.8.1",
+    "@types/react-slick": "^0.23.10",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "react-slick": "^0.29.0"
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "latest",
