--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.8.1",
+    "@types/crypto-js": "^4.1.2",
     "@types/react-slick": "^0.23.10",
+    "axios": "^1.5.1",
+    "crypto-js": "^4.1.1",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
