--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.8.1",
+    "@reduxjs/toolkit": "^1.9.7",
     "@types/crypto-js": "^4.1.2",
     "@types/react-slick": "^0.23.10",
     "axios": "^1.5.1",
@@ -17,6 +18,8 @@
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
+    "react-icons": "^4.11.0",
+    "react-redux": "^8.1.3",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
   },
