--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
+    "react-fast-marquee": "^1.6.1",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
     "react-slick": "^0.29.0",
