--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.1",
     "@reduxjs/toolkit": "^1.9.7",
     "@types/crypto-js": "^4.1.2",
@@ -16,8 +17,10 @@
     "axios": "^1.5.1",
     "crypto-js": "^4.1.1",
     "next": "latest",
+    "ni18n": "^1.1.0",
     "react": "latest",
     "react-dom": "latest",
+    "react-i18next": "^13.2.2",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
     "react-slick": "^0.29.0",
