--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "@types/react-slick": "^0.23.10",
     "axios": "^1.5.1",
     "crypto-js": "^4.1.1",
+    "i18next": "^23.5.1",
     "next": "latest",
     "ni18n": "^1.1.0",
     "react": "latest",
     "react-dom": "latest",
-    "react-i18next": "^13.2.2",
     "react-fast-marquee": "^1.6.1",
+    "react-i18next": "^13.2.2",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
     "react-slick": "^0.29.0",
