implement record, inbox page, add pagination, calendar, add api slider and announcement,

--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "axios": "^1.5.1",
     "crypto-js": "^4.1.1",
     "i18next": "^23.5.1",
+    "moment": "^2.29.4",
     "next": "latest",
     "ni18n": "^1.1.0",
     "react": "latest",
+    "react-calendar": "^4.2.1",
     "react-currency-input-field": "^3.6.11",
     "react-dom": "latest",
     "react-fast-marquee": "^1.6.1",
