--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@chakra-ui/react": "^2.8.1",
     "@reduxjs/toolkit": "^1.9.7",
     "@types/crypto-js": "^4.1.2",
+    "@types/file-saver": "^2.0.6",
     "@types/react-slick": "^0.23.10",
     "axios": "^1.5.1",
     "crypto-js": "^4.1.1",
+    "file-saver": "^2.0.5",
     "i18next": "^23.5.1",
     "moment": "^2.29.4",
     "next": "latest",
